--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-<!--Los estilos externos son definidos con la etiqueta <link>,
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <!--Los estilos externos son definidos con la etiqueta <link>,
 dentro de la sección <head> de la página HTML:-->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-<title>First-code | Marc</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <title>First-code | Marc</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 
-<div class="header" style="font-size: 50px;">
-  <h1 style="font-size: 60px;">Header</h1>
-  <p style="font-size: 40px;">Resize the browser window to see the responsive effect.</p>
-</div>
+    <div class="header" style="font-size: 50px;">
+        <h1>Header</h1>
+        <p>Resize the browser window to see the responsive effect.</p>
+    </div>
 
-<div class="row">
-  <div class="column">
-    <h2 >Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-  </div>
-  
-</div>
+    <div class="row">
+        <div class="column">
+            <h2>HTML - CSS - XML</h2>
+            <div class="gallery">
+                <img src="url" alt="alternatetext">
+                <div class="desc">...</div>
+            </div>
+            <!--
+          La etiqueta <img> está vacía, solo contiene atributos y no tiene una etiqueta de cierre.
+          Tiene dos atributos obligatorios:
+              src: especifica la ruta a la imagen
+              alt: especifica un texto alternativo para la imagen
+          -->
+        </div>
+
+
+    </div>
 
 </body>
+
 </html>
