--- a/index.html
+++ b/index.html
@@ -78,6 +78,30 @@ dentro de la sección <head> de la página HTML:-->
         </div>
     </div>
 
+    <div class="row" id="footer-a">
+        <div class="two-column">
+            <!--Columna con ancho de 50%-->
+            <h2>¡Hecho en Barcelona con corazon y mucho café!</h2>
+        </div>
+        <!--columna con ancho de 25%-->
+        <div class="four-column">
+            <h2>Soprte</h2>
+            <p>Repositorio GitHub</p>
+            <p>Reportar en error</p>
+        </div>
+
+        <div class="four-column">
+            <h2>Diseñador</h2>
+            <p>twitter</p>
+            <p>Instagram</p>
+        </div>
+    </div>
+
+    <div class="row" id="footer-b">
+        <div class="one-column">
+            <p>2020-2021</p>
+        </div>
+    </div>
 </body>
 
 </html>
